--- a/src/production/sllp.conf
+++ b/src/production/sllp.conf
@@ -1,8 +1,8 @@
-[program:ollp]
-process_name = ollp-%(process_num)s
+[program:sllp]
+process_name = sllp-%(process_num)s
 command = python3  /home/ubuntu/social-language-learning-platform/src/server/app.py
         --port=%(process_num)s
-        --log_file_prefix=/var/log/ollp/%(program_name)s-%(process_num)s.log
+        --log_file_prefix=/var/log/sllp/%(program_name)s-%(process_num)s.log
 # Increase numprocs to run multiple processes on different ports.
 # Note that the chat demo won't actually work in that configuration
 # because it assumes all listeners are in one process.
