--- a/src/client/bower.json
+++ b/src/client/bower.json
@@ -3,6 +3,7 @@
   "private": "true",
   "devDependencies": {},
   "dependencies": {
-    "angular-youtube-mb": "~0.1.3"
+    "angular-youtube-mb": "~0.1.3",
+    "ng-tags-input": "~2.1.1"
   }
 }
