--- a/src/client/bower.json
+++ b/src/client/bower.json
@@ -4,6 +4,7 @@
   "devDependencies": {},
   "dependencies": {
     "angular-youtube-mb": "~0.1.3",
-    "ng-tags-input": "~2.1.1"
+    "ng-tags-input": "~2.1.1",
+    "angular-gettext": "~1.1.4"
   }
 }
