--- a/src/client/bower.json
+++ b/src/client/bower.json
@@ -5,6 +5,13 @@
   "dependencies": {
     "angular-youtube-mb": "~0.1.3",
     "ng-tags-input": "~2.1.1",
-    "angular-gettext": "~1.1.4"
+    "angular-gettext": "~1.1.4",
+    "bootstrap": "~3.3.0",
+    "angular-bootstrap": "~0.11.2",
+    "angular": "~1.3.0",
+    "angular-cookies": "~1.3.0",
+    "angular-resource": "~1.3.0",
+    "angular-route": "~1.3.0",
+    "angular-sanitize": "~1.3.0"
   }
 }
