--- a/src/client/bower.json
+++ b/src/client/bower.json
@@ -12,6 +12,7 @@
     "angular-cookies": "~1.3.0",
     "angular-resource": "~1.3.0",
     "angular-route": "~1.3.0",
-    "angular-sanitize": "~1.3.0"
+    "angular-sanitize": "~1.3.0",
+    "traceur-runtime": "~0.0.74"
   }
 }
