--- a/src/client/package.json
+++ b/src/client/package.json
@@ -6,7 +6,12 @@
   "dependencies": {
     "grunt-ngmin": "~0.0.3",
     "grunt": "~0.4.5",
-    "grunt-angular-gettext": "~0.2.15"
+    "grunt-angular-gettext": "~0.2.15",
+    "karma": "~0.12.24",
+    "karma-jasmine": "~0.2.3",
+    "karma-chrome-launcher": "~0.1.5",
+    "dgeni": "~0.4.1",
+    "traceur": "0.0.74"
   },
   "devDependencies": {},
   "scripts": {
