--- a/src/client/package.json
+++ b/src/client/package.json
@@ -13,7 +13,9 @@
     "dgeni": "~0.4.1",
     "traceur": "0.0.74"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "grunt-contrib-uglify": "~0.6.0"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
