--- a/src/client/bower.json
+++ b/src/client/bower.json
@@ -8,7 +8,10 @@
     "angular-gettext": "~1.1.4",
     "bootstrap": "~3.3.0",
     "angular-bootstrap": "~0.11.2",
-    "angular": "~1.3.0",
+    "angular": "^1.3.x",
+    "angular-animate": "v1.3.x",
+    "angular-aria": "^1.3.x",
+    "angular-material": "^0.8.0",
     "angular-cookies": "~1.3.0",
     "angular-resource": "~1.3.0",
     "angular-route": "~1.3.0",
