--- a/web_res/bower.json
+++ b/web_res/bower.json
@@ -11,6 +11,7 @@
     "angular-route": "~1.3.15",
     "mdi": "~1.0.62-beta",
     "angular-material-table": "~0.0.4-alpha",
-    "angular-cookies": "~1.3.15"
+    "angular-cookies": "~1.3.15",
+    "angular-youtube-mb": "~1.0.2"
   }
 }
